--- a/ci/cases/yamls/gfs_defaults_ci.yaml
+++ b/ci/cases/yamls/gfs_defaults_ci.yaml
@@ -3,3 +3,12 @@ defaults:
 base:
   ACCOUNT: {{ 'HPC_ACCOUNT' | getenv }}
   DO_TEST_MODE: "YES"
+
+
+defaults:
+  !INC {{ HOMEgfs }}/parm/config/gfs/yaml/defaults.yaml
+base:
+  ACCOUNT: {{ 'HPC_ACCOUNT' | getenv }}
+  DO_TEST_MODE: "NO"
+  FETCHDIR: "/NCEPDEV/emc-global/1year/David.Grumm/test_data"
+  DO_FETCH_HPSS: "YES"
