Add DO_FETCH_HPSS setting to all non-hera files in workflow/hosts

--- a/workflow/hosts/container.yaml
+++ b/workflow/hosts/container.yaml
@@ -23,3 +23,4 @@ ATARDIR: '${NOSCRUB}/archive_rotdir/${PSLOT}'
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
 SUPPORTED_RESOLUTIONS: ['C96', 'C48']
+DO_FETCH_HPSS: 'NO'
