--- a/workflow/hosts/azurepw.yaml
+++ b/workflow/hosts/azurepw.yaml
@@ -24,5 +24,6 @@ LOCALARCH: 'NO'
 ATARDIR: '' # TODO: This will not yet work from AZURE.
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
+DO_FETCH_HPSS: 'NO' 
 SUPPORT_WAVES: 'NO'
 SUPPORTED_RESOLUTIONS: ['C48', 'C96'] # TODO: Test and support all cubed-sphere resolutions.
