--- a/workflow/hosts/jet.yaml
+++ b/workflow/hosts/jet.yaml
@@ -24,6 +24,7 @@ LOCALARCH: 'NO'
 ATARDIR: '/NCEPDEV/${HPSS_PROJECT}/1year/${USER}/${machine}/scratch/${PSLOT}'
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
+DO_FETCH_HPSS: 'NO'
 SUPPORTED_RESOLUTIONS: ['C384', 'C192', 'C96', 'C48']
 COMINecmwf: /mnt/lfs5/HFIP/hfv3gfs/glopara/data/external_gempak/ecmwf
 COMINnam: /mnt/lfs5/HFIP/hfv3gfs/glopara/data/external_gempak/nam
