--- a/ci/cases/yamls/gfs_defaults_ci.yaml
+++ b/ci/cases/yamls/gfs_defaults_ci.yaml
@@ -9,6 +9,6 @@ defaults:
 base:
   ACCOUNT: {{ 'HPC_ACCOUNT' | getenv }}
   DO_TEST_MODE: "NO"
-  FETCHDIR: "/NCEPDEV/emc-global/1year/David.Grumm/test_data"
+  FETCHDIR: "/NCEPDEV/emc-global/1year/David.Huber/test_data"
   DO_FETCH_HPSS: "YES"
 
