--- a/workflow/hosts/azurepw.yaml
+++ b/workflow/hosts/azurepw.yaml
@@ -24,7 +24,10 @@ LOCALARCH: 'NO'
 ATARDIR: '' # TODO: This will not yet work from AZURE.
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
+DO_TRACKER: 'NO'
+DO_GENESIS: 'NO'
+DO_METP: 'NO' 
 DO_FETCH_HPSS: 'NO' 
 SUPPORT_WAVES: 'NO'
-SUPPORTED_RESOLUTIONS: ['C48', 'C96'] # TODO: Test and support all cubed-sphere resolutions.
+SUPPORTED_RESOLUTIONS: ['C48', 'C96', 'C384', 'C768'] # TODO: Test and support all cubed-sphere resolutions.
 
