--- a/workflow/hosts/googlepw.yaml
+++ b/workflow/hosts/googlepw.yaml
@@ -24,8 +24,11 @@ LOCALARCH: 'NO'
 ATARDIR: '' # TODO: This will not yet work from GOOGLE.
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
+DO_TRACKER: 'NO'
+DO_GENESIS: 'NO'
+DO_METP: 'NO'
 DO_FETCH_HPSS: 'NO'
 SUPPORT_WAVES: 'NO'
-SUPPORTED_RESOLUTIONS: ['C48', 'C96'] # TODO: Test and support all cubed-sphere resolutions.
+SUPPORTED_RESOLUTIONS: ['C48', 'C96', 'C384'] # TODO: Test and support all cubed-sphere resolutions.
 
 
