--- a/workflow/hosts/gaeac5.yaml
+++ b/workflow/hosts/gaeac5.yaml
@@ -25,6 +25,6 @@ ATARDIR: '${NOSCRUB}/archive_rotdir/${PSLOT}'
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
 DO_FETCH_HPSS: 'NO'
-SUPPORTED_RESOLUTIONS: ['C1152', 'C768', 'C384', 'C192', 'C96', 'C48']
+SUPPORTED_RESOLUTIONS: ['C384', 'C192', 'C96', 'C48']
 AERO_INPUTS_DIR: '/gpfs/f5/ufs-ard/world-shared/global/glopara/data/gocart_emissions'
 
